--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ main{
     color: darkslategrey;
     background-color: snow;
     padding-top: 30px;
-    border-top: 2px ridge #666699;
+    border-top: 1px double #666699;
 }
 
 
