--- a/style.css
+++ b/style.css
@@ -161,7 +161,8 @@ button{
 #spotlight {
 
     color: #666699;
-    height: 400px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
 
 
 
