--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ button{
 
 #spotlight {
 
-    color: #666699;
+    color: #ffa500;
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
 
