--- a/style.css
+++ b/style.css
@@ -160,9 +160,9 @@ button{
 
 #spotlight {
 
-    color: #ffa500;
+    color: #666699;
     font-family: 'Roboto', sans-serif;
-    font-size: 30px;
+    font-size: 25px;
 
 
 
@@ -171,7 +171,7 @@ button{
 #spotlight2 {
 
     color: #666699;
-    height: 400px;
+
 
 
 
@@ -180,7 +180,7 @@ button{
 #spotlight3 {
 
     color: #666699;
-    height: 400px;
+
 
 
 
