--- a/style.css
+++ b/style.css
@@ -163,7 +163,8 @@ button{
     color: #666699;
     font-family: 'Roboto', sans-serif;
     font-size: 25px;
-    background-color: orange;
+    background-color: white;
+    padding: 15px;
 
 
 
