--- a/style.css
+++ b/style.css
@@ -162,8 +162,8 @@ button{
 
     color: #666699;
     font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    background-color: #f8f8ff;
+    font-size: 20px;
+    background-color: lavenderblush;
     padding: 25px;
     -moz-border-radius:5px; /* Firefox */
     -webkit-border-radius: 5px; /* Safari, Chrome */
