--- a/style.css
+++ b/style.css
@@ -295,19 +295,13 @@ body{
 
 
 
-
-
-
-/* body {font-family: "Lato", sans-serif;}*/
-
 ul.tab {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: #666699;
-
+    background-color: #f1f1f1;
 }
 
 /* Float the list items side by side */
@@ -316,38 +310,40 @@ ul.tab li {float: left;}
 /* Style the links inside the list items */
 ul.tab li a {
     display: inline-block;
-    color: white;
+    color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 14px 16px;
     text-decoration: none;
     transition: 0.3s;
-    font-size: 12px;
+    font-size: 17px;
 }
 
 /* Change background color of links on hover */
 ul.tab li a:hover {
-    background-color: snow;
-    color: orange;
+    background-color: #ddd;
 }
 
 /* Create an active/current tablink class */
 ul.tab li a:focus, .active {
-    background-color: orange;
-
+    background-color: #ccc;
 }
 
 /* Style the tab content */
 .tabcontent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid orange;
-    border-top: none;
-
+    -webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s;
 }
 
-#East{
+@-webkit-keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
 
-
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
 
 li a{
@@ -356,10 +352,6 @@ li a{
 }
 
 
-#collapse{
-
-    float: right;
-}
 
 
 
