--- a/style.css
+++ b/style.css
@@ -315,7 +315,8 @@ ul.tab li a {
     padding: 14px 16px;
     text-decoration: none;
     transition: 0.3s;
-    font-size: 17px;
+    font-size: 12px;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Change background color of links on hover */
@@ -349,6 +350,7 @@ ul.tab li a:focus, .active {
 li a{
 
     text-decoration: none;
+    font-family: 'Roboto', sans-serif;
 }
 
 
