--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ ul.tab li a {
     padding: 14px 16px;
     text-decoration: none;
     transition: 0.3s;
-    font-size: 12px;
+    font-size: 15px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -321,6 +321,7 @@ ul.tab li a:focus, .active {
     padding: 6px 12px;
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
+    font-family: 'Roboto', sans-serif;
 }
 
 @-webkit-keyframes fadeEffect {
