--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ ul.tab li a {
     padding: 14px 16px;
     text-decoration: none;
     transition: 0.3s;
-    font-size: 15px;
+    font-size: 14px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -322,7 +322,7 @@ ul.tab li a:focus, .active {
 
 /* Style the tab content */
 .tabcontent {
-    display: inline-block;
+    display: none;
     padding: 6px 12px;
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
