--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1{
 .table3{
     border: 1px solid darkslategrey;
     padding: 25px;
-    background-image: url("assets/footerbg2.jpg");
+    background-image: url("assets/formbk.png");
     -moz-border-radius:10px; /* Firefox */
     -webkit-border-radius: 10px; /* Safari, Chrome */
     -khtml-border-radius: 10px; /* KHTML */
