--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ h1{
 
 .inputform
 {
-    -moz-border-radius:5px; /* Firefox */
-    -webkit-border-radius: 7px; /* Safari, Chrome */
-    -khtml-border-radius: 7px; /* KHTML */
-    border-radius: 7px; /* CSS3 */
+    -moz-border-radius:5px;
+    -webkit-border-radius: 7px;
+    -khtml-border-radius: 7px;
+    border-radius: 7px;
     padding: 2px;
     margin-bottom: 10px;
 }
@@ -27,10 +27,10 @@ h1{
     border: 1px solid darkslategrey;
     padding: 25px;
     background-color: #f8f8ff;
-    -moz-border-radius:10px; /* Firefox */
-    -webkit-border-radius: 10px; /* Safari, Chrome */
-    -khtml-border-radius: 10px; /* KHTML */
-    border-radius: 10px; /* CSS3 */
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
     color: darkslategrey;
     margin: 0%;
     }
@@ -46,10 +46,10 @@ h1{
     border: 1px solid darkslategrey;
     padding: 25px;
     background-image: url("assets/formbk.png");
-    -moz-border-radius:10px; /* Firefox */
-    -webkit-border-radius: 10px; /* Safari, Chrome */
-    -khtml-border-radius: 10px; /* KHTML */
-    border-radius: 10px; /* CSS3 */
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
     color: darkslategrey;
     margin: 0%;
 }
@@ -59,10 +59,10 @@ h1{
 
 .tablesearch {
     padding: 90px;
-    -moz-border-radius: 10px; /* Firefox */
-    -webkit-border-radius: 10px; /* Safari, Chrome */
-    -khtml-border-radius: 10px; /* KHTML */
-    border-radius: 10px; /* CSS3 */
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
     margin-bottom: 5%;
     margin-left: auto;
     margin-right: auto;
@@ -211,10 +211,10 @@ main{
 
     height: 150px;
     border: 1px solid #666699;
-    -moz-border-radius:5px; /* Firefox */
-    -webkit-border-radius: 5px; /* Safari, Chrome */
-    -khtml-border-radius: 5px; /* KHTML */
-    border-radius: 5px; /* CSS3 */
+    -moz-border-radius:5px;
+    -webkit-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
 }
 
 #featured{
@@ -238,10 +238,10 @@ main{
     color: white;
     height: 125px;
     padding: 25px;
-    -moz-border-radius:10px; /* Firefox */
-    -webkit-border-radius: 10px; /* Safari, Chrome */
-    -khtml-border-radius: 10px; /* KHTML */
-    border-radius: 10px; /* CSS3 */
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
 }
 
 #foot2{
@@ -252,10 +252,10 @@ main{
     color: white;
     height: 125px;
     padding: 25px;
-    -moz-border-radius:10px; /* Firefox */
-    -webkit-border-radius: 10px; /* Safari, Chrome */
-    -khtml-border-radius: 10px; /* KHTML */
-    border-radius: 10px; /* CSS3 */
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
 
 }
 
@@ -327,11 +327,11 @@ h3{
 
 
 
-/*
+
 
 body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif; }
 
-*/
+
 ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
 ul#tabs li { display: inline; }
 ul#tabs li a { color: #42454a; background-color: #dedbde; border: 1px solid #c9c3ba; border-bottom: none; padding: 0.3em; text-decoration: none; }
