--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ main{
 #featured{
 
     margin-top: 0;
-    border-bottom: 2px double #666699;
+    border-top: 2px double #666699;
 }
 
 .centre{
