--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ main{
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
     color: darkslategrey;
-    background-color: snow;
+    background-color: #f1f0ee;
     padding-top: 10px;
 
 
