--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ h2{
     max-width: 1500px;
     background-image: url("assets/banner2.jpg");
     height: 550px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 button{
