--- a/style.css
+++ b/style.css
@@ -123,6 +123,12 @@ h2{
     100% { transform: rotate(360deg); }
 }
 
+.container2{
+
+    text-decoration: none;
+}
+
+
 .container{
 
     max-width: 1500px;
@@ -333,10 +339,6 @@ h3{
 }
 
 
-
-
-
-
 /*
 
 body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif; }
@@ -351,72 +353,12 @@ div.tabContent { border: 1px solid orange; padding: 0.5em; background-color: #f1
 div.tabContent.hide { display: none; }
 
 
-
 h5{
 
     font-family: 'Roboto', sans-serif;
     color: orange;
     font-size: 15px;
 }
-
-
-
-/*
-ul.tab {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-}
-
-
-ul.tab li {float: left;}
-
-
-ul.tab li a {
-    display: inline-block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    transition: 0.3s;
-    font-size: 14px;
-    font-family: 'Roboto', sans-serif;
-}
-
-ul.tab li a:hover {
-    background-color: #ddd;
-}
-
-
-ul.tab li a:focus, .active {
-    background-color: #ccc;
-}
-
-
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    -webkit-animation: fadeEffect 1s;
-    animation: fadeEffect 1s;
-    font-family: 'Roboto', sans-serif;
-}
-
-@-webkit-keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
-
-@keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
-
-
-*/
-
 
 li a{
 
