--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ nav[role="sub"] li a:HOVER{
     color:darkslategrey;
 }
 
-nav[role="sub2"] ul li a{
+nav[role="sub2"] li a{
 
     text-decoration: none;
     color: orange;
