--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ button{
 #content3{
     
     background-image: url("assets/wallpaper.jpg");
+    -moz-border-radius: 0px 0px 10px 10px;
+    -webkit-border-radius: 0px 0px 10px 10px;
+    -khtml-border-radius: 0px 0px 10px 10px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 .floatleft {
