--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ button.accordion {
     color: #444;
     cursor: pointer;
     padding: 18px;
-    width: 100%;
+    width: 50%;
     border: none;
     text-align: left;
     outline: none;
@@ -394,7 +394,7 @@ button.accordion:after {
     content: '\02795';
     font-size: 13px;
     color: #777;
-    float: right;
+    /*float: right;*/
     margin-left: 5px;
 }
 
