--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ button.accordion:after {
     content: '\02795';
     font-size: 13px;
     color: #777;
-    /*float: right;*/
+    float: left;
     margin-left: 5px;
 }
 
