--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1{
 .table3{
     border: 1px solid darkslategrey;
     padding: 25px;
-    background-image: url("assets/bnblogocroporange.png");
+    background-color: #ccc;
     -moz-border-radius:10px;
     -webkit-border-radius: 10px;
     -khtml-border-radius: 10px;
