--- a/style.css
+++ b/style.css
@@ -386,6 +386,7 @@ button.accordion {
     outline: none;
     font-size: 14px;
     transition: 0.4s;
+    border: 1px solid orange;
 }
 
 button.accordion.active, button.accordion:hover {
