--- a/style.css
+++ b/style.css
@@ -418,6 +418,9 @@ div.panel {
     overflow: hidden;
     transition: 0.6s ease-in-out;
     opacity: 0;
+    border-top: 1px solid orange;
+    border-right: 1px solid orange;
+    border-left: 1px solid orange;
 }
 
 div.panel.show {
