--- a/style.css
+++ b/style.css
@@ -418,6 +418,10 @@ div.panel {
     overflow: hidden;
     transition: 0.6s ease-in-out;
     opacity: 0;
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
     border-top: 1px solid orange;
     border-right: 1px solid orange;
     border-left: 1px solid orange;
