--- a/style.css
+++ b/style.css
@@ -427,7 +427,11 @@ div.panel {
     border-left: 1px solid orange;
 }
 
-
+#mycontainer{
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 div.panel.show {
     opacity: 1;
