--- a/style.css
+++ b/style.css
@@ -395,6 +395,10 @@ button.accordion {
     border-radius: 10px;
 }
 
+.lastaccordion{
+    border-bottom: 1px solid orange;
+}
+
 button.accordion.active, button.accordion:hover {
     background-color: #ddd;
 }
