--- a/style.css
+++ b/style.css
@@ -431,6 +431,13 @@ div.panel {
     border-left: 1px solid orange;
 }
 
+div.lastpanel {
+
+    border-bottom: 1px solid orange !important;
+}
+
+
+
 body{
     max-width: 1500px;
     margin-left: auto;
