--- a/style.css
+++ b/style.css
@@ -433,7 +433,7 @@ div.panel {
 
 .lastpanel{
 
-    border-bottom: 1px solid orange;
+    border-bottom: 1px solid orange !important;
     border-right: 1px solid orange;
     border-left: 1px solid orange;
 
