--- a/style.css
+++ b/style.css
@@ -376,6 +376,7 @@ li a{
 }
 
 button.accordion {
+    font-family: 'Roboto', sans-serif;
     background-color: #eee;
     color: #444;
     cursor: pointer;
