--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ button.accordion {
     /*border: none;*/
     text-align: left;
     outline: none;
-    font-size: 18px;
+    /*font-size: 12px;*/
     transition: 0.4s;
     border-top: 1px solid orange;
     border-right: 1px solid orange;
@@ -406,7 +406,7 @@ button.accordion.active, button.accordion:hover {
 
 button.accordion:after {
     content: '\02795';
-    font-size: 18px;
+    /*font-size: 12px;*/
     color: #777;
     float: left;
     margin-left: 5px;
