--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h1{
 .table4{
 
     padding: 25px;
-    background-color: #ccc;
+    background-color: white;
     -moz-border-radius:10px;
     -webkit-border-radius: 10px;
     -khtml-border-radius: 10px;
