--- a/style.css
+++ b/style.css
@@ -370,6 +370,10 @@ ul#tabs {
     list-style-type: none;
     margin: 30px 0 0 0;
     padding: 0 0 0.3em 0;
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
 }
 ul#tabs li {
     display: inline;
@@ -394,6 +398,10 @@ div.tabContent {
     border: 1px solid orange;
     padding: 0.5em;
     background-color: #f1f0ee;
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
 }
 div.tabContent.hide {
     display: none;
