--- a/style.css
+++ b/style.css
@@ -370,10 +370,10 @@ ul#tabs {
     list-style-type: none;
     margin: 30px 0 0 0;
     padding: 0 0 0.3em 0;
-    -moz-border-radius:10px;
-    -webkit-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    border-radius: 10px;
+    -moz-border-radius: 0px 10px 10px 10px;
+    -webkit-border-radius: 0px 10px 10px 10px;
+    -khtml-border-radius: 0px 10px 10px 10px;
+    border-radius: 0px 10px 10px 10px;
 }
 ul#tabs li {
     display: inline;
@@ -386,10 +386,10 @@ ul#tabs li a {
     border-bottom: none;
     padding: 0.3em;
     text-decoration: none;
-    -moz-border-radius:10px;
-    -webkit-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    border-radius: 10px;
+    -moz-border-radius:0px 10px 0px 0px;
+    -webkit-border-radius: 10px 10px 0px 0px;
+    -khtml-border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
 }
 ul#tabs li a:hover {
     background-color: #f1f0ee;
