--- a/style.css
+++ b/style.css
@@ -370,10 +370,10 @@ ul#tabs {
     list-style-type: none;
     margin: 30px 0 0 0;
     padding: 0 0 0.3em 0;
-    -moz-border-radius: 0px 0px 10px 10px;
-    -webkit-border-radius: 0px 0px 10px 10px;
-    -khtml-border-radius: 0px 0px 10px 10px;
-    border-radius: 0px 0px 10px 10px;
+    -moz-border-radius: 0px 10px 10px 10px !important;
+    -webkit-border-radius: 0px 10px 10px 10px !important;
+    -khtml-border-radius: 0px 10px 1px 10px !important;
+    border-radius: 0px 10px 10px 10px !important;
 }
 ul#tabs li {
     display: inline;
