--- a/style.css
+++ b/style.css
@@ -164,6 +164,16 @@ h2{
     border-radius: 10px 10px 0px 0px;
 }
 
+#navigation2{
+    max-width: 1500px;
+    background-color: #666699;
+    height: 40px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
+}
+
 #content{
     max-width: 1500px;
     background-image: url("assets/banner2.jpg");
