--- a/style.css
+++ b/style.css
@@ -548,3 +548,17 @@ div.panel.show {
 
     height: 200px;
 }
+
+nav[role="sub30"] ul li a{
+    display: inline-block;
+    float: left;
+    color: white;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    padding: 10px;
+}
+
+nav[role="sub30"] li a:HOVER{
+
+    color:darkslategrey;
+}
