--- a/style.css
+++ b/style.css
@@ -86,7 +86,13 @@ h1{
     padding-right: 75px;
 }
 
+#textlink{
 
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    color: orange;
+    font-size: 12px;
+}
 
 .tablesearch {
     padding: 90px;
