--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ h1{
     color: orange;
     font-size: 15px;
     float: right;
+    margin-bottom: 0;
+    margin-top: 10px;
 }
 
 .tablesearch {
