--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h1{
 .table6{
     border: 1px solid orange;
     padding: 25px;
-    background-color: snow;
+    background-color: #f8f8ff;
     -moz-border-radius:10px;
     -webkit-border-radius: 10px;
     -khtml-border-radius: 10px;
