--- a/style.css
+++ b/style.css
@@ -467,7 +467,8 @@ div.tabContent {
     -webkit-border-radius: 0px 10px 10px 10px !important;
     -khtml-border-radius: 0px 10px 10px 10px !important;
     border-radius: 0px 10px 10px 10px !important;
-    height: 300px !important;
+    min-height: 50%;
+
 }
 div.tabContent.hide {
     display: none;
