--- a/style.css
+++ b/style.css
@@ -458,6 +458,7 @@ ul#tabs li a.selected {
     color: #000; background-color: #f1f0ee;
     font-weight: bold;
     padding: 0.7em 0.3em 0.38em 0.3em;
+    height: 300px;
 }
 div.tabContent {
     border: 1px solid orange;
@@ -467,7 +468,7 @@ div.tabContent {
     -webkit-border-radius: 0px 10px 10px 10px !important;
     -khtml-border-radius: 0px 10px 10px 10px !important;
     border-radius: 0px 10px 10px 10px !important;
-    min-height: 50%;
+
 
 }
 div.tabContent.hide {
