--- a/style.css
+++ b/style.css
@@ -431,7 +431,7 @@ body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
 */
 ul#tabs {
     list-style-type: none;
-    margin: 30px 0 0 0;
+    margin: 0 0 0 0;
     padding: 0 0 0.3em 0;
 
 }
