--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
 ul#tabs {
     list-style-type: none;
     margin: 10px 0 0 0;
-    padding: 0 0 0.3em 0;
+    padding: 0 0 0 0;
 
 }
 ul#tabs li {
