--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1{
     -khtml-border-radius: 10px;
     border-radius: 10px;
     color: #666699;
-    margin: 0%;
+    /*margin: 0%;*/
     margin-right: auto;
     margin-left: auto;
 }
@@ -63,7 +63,7 @@ h1{
     -khtml-border-radius: 10px;
     border-radius: 10px;
     color: #666699;
-    margin-left: 5%;
+    /*margin-left: 5%;*/
     margin-right: auto;
     margin-left: auto;
 }
