--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h1{
 .table5{
     border: 1px solid orange;
     padding: 25px;
-    background-color: snow;
+    background-color: #f1f0ee;
     -moz-border-radius:10px;
     -webkit-border-radius: 10px;
     -khtml-border-radius: 10px;
